<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="154dp"
        tools:layout_editor_absoluteY="104dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="69dp"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <LinearLayout
                        android:layout_width="219dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/User_name_txt"
                            android:layout_width="221dp"
                            android:layout_height="wrap_content"
                            android:text="@string/user_name_txt" />

                        <TextView
                            android:id="@+id/User_phone_txt"
                            android:layout_width="221dp"
                            android:layout_height="wrap_content"
                            android:text="@string/user_phone_txt" />

                        <TextView
                            android:id="@+id/User_email_txt"
                            android:layout_width="224dp"
                            android:layout_height="wrap_content"
                            android:text="@string/user_email_txt" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_update"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/btn_update" />

                    <Button
                        android:id="@+id/btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="69dp"
                        android:layout_weight="1"
                        android:text="@string/btn_delete" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>